2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Take another tar of ./pg_tblspc by
	  keeping the symlink.

2015-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix perl warning

2015-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Clerk.pm: do not call seek_file two times

2015-06-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: On recovery, set initial window to (0, -1)
	* installcheck/Installcheck/Mock.pm: Set verbose to YES

2015-06-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Vault dle not in the disklist, revert patch
	  committed on 2014-01-09

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Set initial window correctly on recovery

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: s/check_auth/check_host_setting/g, check
	maxdumps is the same for all DLEs of a host

2015-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Check return value of Amanda::Changer->new

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Time::HiRes is not available everywhere.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set total_time to the time of amvault
	  on an amvault run.
	* perl/Amanda/Report/human.pm: Parse amvault FINISH line.
	* server-src/amvault.pl Log a FINISH line.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Improve message.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c: More fix if SAMBA_CLIENT is not
	  defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: More fix if SAMBA_CLIENT is not defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tests.swg: #include "glib-util.h"
